# pokedex

./: .gitattributes  .gitignore  .gitlab-ci.yml  Async.elm  CONTRIBUTORS  DecodeExt.elm  HttpExt.elm  ListExt.elm  Main.elm  MaybeExt.elm  NamedAPIResource.elm  NamedAPIResourceList.elm  Pokemon.elm  PokemonTable.elm  README.md  StringExt.elm  Type.elm  build.bat  compile.bat  elm-package.json  elm.js  elm.json  index.html  makefile  shell.nix  startlive.bat
.github/workflows/: deploy.yml  pages.yml
css/: damageChart.css  pokemonDetail.css  styles.css
scripts/: .gitignore  AddNationalDexNumber.hs  DownloadImages.hs  Helpers.hs  OptimizeImages.hs  cabal.project  imageurls.txt  scripts.cabal  shell.nix
scripts/app/: Main.hs
scripts/src/: Scripts.hs
scripts/src/Scripts/: DownloadImages.hs  OptimizeImages.hs
src/: Ability.elm  Amyfy.elm  Helpers.elm  LocalStorage.elm  Main.elm  Pokedex.elm  Pokemon.elm  PokemonCSVRow.elm  PokemonCsvString.elm  PokemonTypesCsvString.elm  StringHelpers.elm  Type.elm  TypeEffectiveness.elm  TypeEffectivenessCsvString.elm  Types.elm  TypesCsvString.elm  index.html  site.webmanifest  styles.css
src/Data/: Pokemon.elm  PokemonTypes.elm  TypeEffectiveness.elm  Types.elm
src/Pokemon/: CSVRow.elm  Data.elm  Details.elm  Helpers.elm  List.elm  Mode.elm  SharedStyles.elm
src/css/: styles.css
src/data/: pokemon.csv
